feat: allow to pass initContainers

--- a/charts/multi-service/templates/deployment.yaml
+++ b/charts/multi-service/templates/deployment.yaml
@@ -44,6 +44,10 @@ spec:
       topologySpreadConstraints:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.initContainers }}
+      initContainers:
+        {{- toYaml . | nindent 8}}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
