--- a/charts/multi-service/values.yaml
+++ b/charts/multi-service/values.yaml
@@ -102,16 +102,16 @@ resources:
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  limits:
-    # -- CPU limits for the Deployment
-    cpu: 100m
-    # -- Memory limits for the Deployment
-    memory: 512Mi
-  requests: {}
+  requests:
     # -- CPU requests for the Deployment
-    # cpu: 500m
+    cpu: 100m
     # -- Memory requests for the Deployment
-    # memory: 256Mi
+    memory: 256Mi
+  limits: {}
+    # -- CPU limits for the Deployment
+#    cpu: 500m
+    # -- Memory limits for the Deployment
+#    memory: 512Mi
 
 # -- Configurable nodeSelector so that you can target specific nodes for your deployment
 nodeSelector: {}
