--- a/charts/multi-service/values.yaml
+++ b/charts/multi-service/values.yaml
@@ -287,3 +287,47 @@ volumeClaimTemplates:
 # ----------------
 
 initContainers: []
+
+# ----------------
+# CronJobs
+# ----------------
+
+cronjob:
+  # -- The schedule in cron format
+  schedule: "0 0 * * *"
+  # -- Specifies how to treat concurrent executions of a Job
+  concurrencyPolicy: Forbid
+  # -- Optional deadline in seconds for starting the job
+  startingDeadlineSeconds:
+  # -- This flag tells the controller to suspend subsequent executions
+  suspend: 'false'
+  # -- The number of successful finished jobs to retain
+  successfulJobsHistoryLimit: 3
+  # -- The number of failed finished jobs to retain
+  failedJobsHistoryLimit: 1
+
+  job:
+    # -- Specifies the maximum desired number of pods the job should run at any given time
+    parallelism: 1
+    # -- Specifies the desired number of successfully finished pods the job should be run with
+    completions: 1
+    # -- CompletionMode specifies how Pod completions are tracked
+    completionMode: NonIndexed
+    # -- Specifies the number of retries before marking this job failed
+    backoffLimit: 3
+    # -- Specifies the duration in seconds relative to the startTime that the job may be continuously active before the system tries to terminate it
+    activeDeadlineSeconds: 3600
+    # -- ttlSecondsAfterFinished limits the lifetime of a Job that has finished execution (either Complete or Failed)
+    ttlSecondsAfterFinished: 86400
+    # -- Suspend specifies whether the Job controller should create Pods or not
+    suspend: 'false'
+    # -- Restart policy for all containers within the pod
+    restartPolicy: OnFailure
+
+    # -- Entrypoint array
+    command: []
+      # - /bin/sh
+      # - -c
+    # -- Arguments to the entrypoint
+    args: []
+      # - date; echo Hello from the Kubernetes cluster
