--- a/charts/multi-service/templates/deployment.yaml
+++ b/charts/multi-service/templates/deployment.yaml
@@ -97,4 +97,8 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.volumes }}
+      volumes:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
 {{- end }}
