--- a/charts/multi-service/templates/slos.yaml
+++ b/charts/multi-service/templates/slos.yaml
@@ -1,9 +1,10 @@
+{{ $slocounter := 0 | int }}
 {{- range .Values.slo }}
 ---
 apiVersion: pyrra.dev/v1alpha1
 kind: ServiceLevelObjective
 metadata:
-  name: {{ include "multi-service.fullname" $ }}-{{ .type }}
+  name: {{ include "multi-service.fullname" $ }}-{{ $slocounter }}
   labels:
     prometheus: k8s
     role: alert-rules
@@ -26,4 +27,5 @@ spec:
       total:
         metric: {{ .metricTotal }}
 {{ end }}
+{{ $slocounter = add1 $slocounter }}
 {{ end }}
