--- a/charts/multi-service/templates/services-blue-green.yaml
+++ b/charts/multi-service/templates/services-blue-green.yaml
@@ -1,9 +1,10 @@
+{{- if and .Values.rollouts.enabled .Values.rollouts.blueGreen.enabled (has .Values.kind (list "Deployment" "StatefulSet")) }}
 {{- range .Values.services }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "multi-service.fullname" $ }}-{{ .name }}
+  name: {{ include "multi-service.fullname" $ }}-{{ .name }}-preview
   labels:
     {{- include "multi-service.labels" $ | nindent 4 }}
     {{- range $key, $value := .labels }}
@@ -24,4 +25,5 @@ spec:
       name: {{ .ports.name }}
   selector:
     {{- include "multi-service.selectorLabels" $ | nindent 4 }}
+{{- end }}
 {{- end }}
