--- a/charts/multi-service/templates/deployment.yaml
+++ b/charts/multi-service/templates/deployment.yaml
@@ -8,7 +8,11 @@ metadata:
 spec:
   {{- if not .Values.autoscaling.enabled  }}
   {{- if not .Values.keda.enabled }}
+  {{- if and .Values.rollouts.enabled .Values.rollouts.scaleDownDeployment }}
+  replicas: 0
+  {{- else }}
   replicas: {{ .Values.replicaCount }}
+  {{- end }}
   {{- end }}
   {{- end }}
   minReadySeconds: {{ .Values.minReadySeconds | default 30 }}
