--- a/charts/multi-service/templates/rollout-canary.yaml
+++ b/charts/multi-service/templates/rollout-canary.yaml
@@ -1,4 +1,5 @@
 {{- if and .Values.rollouts.enabled .Values.rollouts.canary.enabled (has .Values.kind (list "Deployment" "StatefulSet")) .Values.ingress.enabled }}
+{{ $counter := 0 | int }}
 {{- range .Values.ingresses }}
 {{- $svcName := .backend.service.name -}}
 ---
@@ -99,8 +100,10 @@ spec:
 
       # Anti-affinity configuration between desired and previous ReplicaSet.
       # Only one must be specified.
+      {{- if $.Values.rollouts.canary.antiAffinity }}
       antiAffinity:
         {{- toYaml $.Values.rollouts.canary.antiAffinity | nindent 8 }}
+      {{- end }}
 
       # Traffic routing specifies the ingress controller or service mesh configuration to achieve advanced traffic
       # splitting. If omitted, will achieve traffic split via a weighted replica counts between the canary and stable ReplicaSet.
@@ -108,10 +111,12 @@ spec:
         {{- if $.Values.rollouts.canary.trafficRouting.nginx.enabled }}
         # NGINX Ingress Controller routing configuration
         nginx:
-          stableIngress: {{ .className }} # required
+          stableIngress: {{ include "multi-service.fullname" $ }}-{{ $svcName }}-{{ $counter }} # required
           annotationPrefix: {{ $.Values.rollouts.canary.trafficRouting.nginx.annotationPrefix }} # optional
+          {{- if $.Values.rollouts.canary.trafficRouting.nginx.additionalIngressAnnotations }}
           additionalIngressAnnotations: # optional
             {{- toYaml $.Values.rollouts.canary.trafficRouting.nginx.additionalIngressAnnotations | nindent 12 }}
+          {{- end }}
         {{- end }}
 
         {{- if $.Values.rollouts.canary.trafficRouting.smi.enabled }}
@@ -124,5 +129,6 @@ spec:
       # Add a delay in second before scaling down the canary pods when update is aborted for canary strategy with
       # traffic routing (not applicable for basic canary). 0 means canary pods are not scaled down.
       abortScaleDownDelaySeconds: {{ $.Values.rollouts.canary.abortScaleDownDelaySeconds }}
+{{ $counter = add1 $counter }}
 {{- end }}
 {{- end }}
