--- a/charts/multi-service/templates/statefulset.yaml
+++ b/charts/multi-service/templates/statefulset.yaml
@@ -51,11 +51,18 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- if or .Values.env .Values.extraenv .Values.extraEnv }}
           env:
-            {{- toYaml .Values.env | nindent 12 }}
-            {{- if .Values.extraenv  }}
-            {{- toYaml .Values.extraenv | nindent 12 }}
+            {{- with .Values.env }}
+            {{- toYaml . | nindent 12 }}
             {{- end }}
+            {{- with .Values.extraenv  }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
+            {{- with .Values.extraEnv  }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
+          {{- end }}
           ports:
             {{- toYaml .Values.ports | nindent 12 }}
           livenessProbe:
